--- a/course-api-data/src/main/resources/application.properties
+++ b/course-api-data/src/main/resources/application.properties
@@ -1,15 +1,27 @@
-#server.port: 8400
+#server.port: 8082
 server.servlet.context-path=/courseapi
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-spring.datasource.driver-class-name=com.ibm.db2.jcc.DB2Driver
-spring.datasource.url=jdbc:db2://10.10.1.236:50000/EUGENE
-spring.datasource.username=db2admin
-spring.datasource.password=ufinity123!@#
+#spring.datasource.driver-class-name=com.ibm.db2.jcc.DB2Driver
+#spring.datasource.url=jdbc:db2://10.10.1.236:50000/EUGENE
+#spring.datasource.username=db2admin
+#spring.datasource.password=ufinity123!@#
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/databasetest?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=04J63c93
+
+
 
 management.endpoint.health.show-details=always
 management.endpoint.health.enabled=true
-ma
+#management.endpoints.web.cors.allow-credentials=true
+
+#server.servlet.session.timeout.seconds=4000
+
+
 
